--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-linear-gradient": "^2.4.0",
     "react-navigation": "^2.10.0"
   }
 }
