--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.1.1",
     "expo": "^27.0.1",
+    "lodash": "^4.17.10",
+    "owasp-password-strength-test": "^1.3.0",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
