--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "apsl-react-native-button": "^3.1.1",
+    "async": "^2.6.1",
     "lodash": "^4.17.10",
     "owasp-password-strength-test": "^1.3.0",
     "prop-types": "^15.6.2",
@@ -26,7 +27,10 @@
     "react-native": "~0.55.2",
     "react-native-document-picker": "^2.1.0",
     "react-native-fab": "^1.0.7",
+    "react-native-fs": "^2.11.15",
     "react-native-modal": "^6.5.0",
-    "react-navigation": "^2.10.0"
+    "react-native-os": "^1.2.1",
+    "react-navigation": "^2.10.0",
+    "targz": "^1.0.1"
   }
 }
