--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "^23.5.0",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "rn-nodeify": "tradle/rn-nodeify"
   },
   "scripts": {
     "start": "react-native start",
@@ -18,19 +19,99 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.1",
     "apsl-react-native-button": "^3.1.1",
+    "assert": "^1.4.1",
     "async": "^2.6.1",
+    "asyncstorage-down": "^4.0.1",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "events": "^1.1.1",
+    "https-browserify": "0.0.1",
     "lodash": "^4.17.10",
     "owasp-password-strength-test": "^1.3.0",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.10",
     "prop-types": "^15.6.2",
+    "querystring-es3": "^0.2.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-crypto": "^2.1.2",
     "react-native-document-picker": "^2.1.0",
     "react-native-fab": "^1.0.7",
     "react-native-fs": "^2.11.15",
+    "react-native-level-fs": "^3.0.1",
     "react-native-modal": "^6.5.0",
     "react-native-os": "^1.2.1",
+    "react-native-randombytes": "^3.5.0",
+    "react-native-tcp": "^3.3.0",
+    "react-native-udp": "^2.3.1",
     "react-navigation": "^2.10.0",
-    "targz": "^1.0.1"
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "targz": "^1.0.1",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
